# Moswar-bot

./: .gitignore  README.md  authorization.py  code_to_be_used.py  general_functions.py  main.py  pyproject.toml  requirements.txt
configuration/: configuration.py
entities/: pets.py  player.py
locations/: alley.py  home.py  locations_secondary.py  metro.py
schemas/: alley.py  locations_secondary.py  player.py
utils/: custom_logging.py  decorators.py  general.py  human_simulation.py
wiki/: enum_and_literal.md  mimic_human_interactions.md  to_add_to_notes.md
