[project]
name = "moswar-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["dotenv>=0.9.9", "selenium>=4.34.2", "tqdm>=4.67.1"]


[tool.pyright]
exclude = ["/.venv/"]
typeCheckingMode = "strict"
executionEnvironments = [
    { root = "./", extraPaths = [
        ".venv/lib/python3.12/site-packages/selenium",
    ], reportUnknownMemberType = false, reportUnknownVariableType = false },
]

[tool.ruff]
line-length = 110
